--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0
   flutter_screenutil: ^0.4.2
+  provider: ^2.0.0+1
+  rxdart: ^0.21.0
 
 dev_dependencies:
   flutter_test:
