--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_screenutil: ^0.4.2
   provider: ^2.0.0+1
   rxdart: ^0.21.0
+  charts_flutter: ^0.6.0
 
 dev_dependencies:
   flutter_test:
